# interpreter-in-rust

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: lexer.rs  lib.rs  main.rs  repl.rs  token.rs
src/ast/: expressions.rs  mod.rs  program.rs  statements.rs  tree.rs
src/evaluator/: builtins.rs  errors.rs  eval.rs  helpers.rs  mod.rs
src/lexer/: keywords.rs  mod.rs  token.rs  tokenizer.rs
src/object/: environment.rs  mod.rs  objects.rs
src/parser/: helpers.rs  mod.rs  parse_expressions.rs  parse_statements.rs  program.rs  tracing.rs
tests/: integration_test.rs
tests/testfiles/: array_filter.mok  array_map.mok  array_reduce.mok  basic_functions.mok  higher_order_functions.mok  if_statements.mok  increment_array.mok
