[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "interpreter"
path = "src/main.rs"

[lib]
name = "interpreter_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "1.2"
clap = { version = "3.2", features = ["derive"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }